# threescale-wasm-auth

./: .gitignore  Cargo.toml  DECODE.md  Makefile  README.md  build.rs
compose/: docker-compose.yaml
compose/envoy/: envoy.yaml  lds.yaml
compose/keycloak/: Dockerfile  headers  import.json  setup.sh
servicemesh/: manifest.yaml
servicemesh/crds/: threescale-saas-svcentry.yaml
servicemesh/crds/istio/: envoyfilter.yaml
servicemesh/crds/ossm/: servicemeshextension.yaml
src/: authrep.rs  configuration.rs  lib.rs  proxy.rs  system.rs  upstream.rs  url.rs  util.rs
src/configuration/: location.rs
src/proxy/: authrep.rs  decode.rs  metadata.rs  request_headers.rs  value.rs
src/upstream/: endpoint.rs  serde.rs
src/util/: pairs.rs
