[package]
name = "threescale-wasm-auth"
version = "0.1.0"
authors = ["Alejandro Martinez Ruiz <alex@flawedcode.org>"]
edition = "2018"

[dependencies]
proxy-wasm = { git = "https://github.com/3scale/proxy-wasm-rust-sdk", branch = "3scale" }
log = "^0.4"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
threescalers = { version = "^0.7", default-features = false }
anyhow = "^1"
thiserror = "^1"
url = { git = "https://github.com/3scale-rs/rust-url", branch = "3scale", features = ["serde"] }

[lib]
crate-type = ["cdylib"]
